--- a/TD1.html
+++ b/TD1.html
@@ -11,7 +11,7 @@
         <main>
             <p>FWEAH</p>
             <p>Click the link to enter Carti's shop</p>
-            <img src="/Users/natnat/Music/Music/Media.localized/Music/Playboi Carti/Unreleased/front-cover.jpg" alt="" style="width:200px;height:200px;">
+            <img src="https://m.media-amazon.com/images/I/71o7oddTy8L._UF1000,1000_QL80_.jpg" alt="" style="width:200px;height:200px;">
 
         </main>
         <a href="https://shop.playboicarti.com/"
