--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <h1> Playboi Carti </h1>
         </header>
         <main>
-            <p>FWEAH</p>
+            <p>Album droping in around April 2025</p>
             <p>Click the link to enter Carti's shop</p>
             <img src="https://m.media-amazon.com/images/I/71o7oddTy8L._UF1000,1000_QL80_.jpg" alt="" style="width:200px;height:200px;">
 
