--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <button>cliquez ici</button>
             </a>
         <footer>
-            <p>Copyright © 2024</p>
+            <p>Copyright by nathan © 2024</p>
         </footer>
     </body>
 </center>
